# AWS-CDK-Microservice-Template

./: Makefile  README.md  app.py  cdk.json  pyproject.toml  set_context.py
src/: Dockerfile  app.py
stacks/: microservice_stack.py
tests/: test_lambda_handler.py  test_stack.py
